# vmcam

./: INSTALL  LICENSE  Makefile  Makefile.in  README.md  autogen.sh  configure  configure.ac  crc32.h  cs378x.c  keyblock.c  keyblock.h  log.h  main.c  makefile  md5crypt.c  md5crypt.h  newcamd.c  newcamd.h  objects.mk  sources.mk  ssl-client.c  ssl-client.h  subdir.mk  tcp-client.c  tcp-client.h  vm_api.c  vm_api.h
src/: Makefile.am  Makefile.in  base64.c  base64.h  crc32.c  cs378x.c  cs378x.h  keyblock.c  log.h  main.c  md5crypt.c  newcamd.c  ssl-client.c  tcp-client.c  var_func.c  var_func.h  vm_api.c  vm_api.h
